# 3dsTrident

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  RELEASE_NOTES.md  trident_libretro.info
.github/workflows/: build.yml  ios-retroarch.yml  perf.yml  test.yml
contrib/: LIBRETRO_SUBMISSION.md  PERFORMANCE_EVALUATION.md  RCHEEVOS_CONTRIBUTION.md  TESTING_IOS.md  TESTING_WINDOWS.md  rcheevos-3ds-memory-regions.patch
tests/: run_all.sh
tests/docker/: Dockerfile  docker-compose.yml
tests/functional/: CMakeLists.txt  conftest.py  requirements.txt  test_core.py  test_harness.c  test_runner.py
tests/ios/TridentTest/: Info.plist  main.m
tests/perf/: perf_bench.py
tests/perf/baselines/: README.md
tests/perf/roms/: README.md  build_roms.sh
