cmake_minimum_required(VERSION 3.16)
project(3dsEmulator)

set(BUILD_LIBRETRO_CORE ON CACHE BOOL "" FORCE)
set(USE_LIBRETRO_AUDIO ON CACHE BOOL "" FORCE)

set(ENABLE_DISCORD_RPC OFF CACHE BOOL "" FORCE)
set(ENABLE_LUAJIT OFF CACHE BOOL "" FORCE)
set(ENABLE_QT_GUI OFF CACHE BOOL "" FORCE)
set(ENABLE_VULKAN OFF CACHE BOOL "" FORCE)
set(ENABLE_OPENGL ON CACHE BOOL "" FORCE)
set(ENABLE_HTTP_SERVER OFF CACHE BOOL "" FORCE)
set(ENABLE_TESTS OFF CACHE BOOL "" FORCE)
set(ENABLE_USER_BUILD ON CACHE BOOL "" FORCE)

add_subdirectory(vendor/Panda3DS)
