cmake_minimum_required(VERSION 3.16)
project(3dsEmulator)

set(BUILD_LIBRETRO_CORE ON CACHE BOOL "" FORCE)
set(USE_LIBRETRO_AUDIO ON CACHE BOOL "" FORCE)

set(ENABLE_DISCORD_RPC OFF CACHE BOOL "" FORCE)
set(ENABLE_LUAJIT OFF CACHE BOOL "" FORCE)
set(ENABLE_QT_GUI OFF CACHE BOOL "" FORCE)
set(ENABLE_VULKAN OFF CACHE BOOL "" FORCE)
set(ENABLE_OPENGL ON CACHE BOOL "" FORCE)
set(ENABLE_HTTP_SERVER OFF CACHE BOOL "" FORCE)
set(ENABLE_TESTS OFF CACHE BOOL "" FORCE)
set(ENABLE_USER_BUILD ON CACHE BOOL "" FORCE)

add_subdirectory(vendor/Panda3DS)
set_target_properties(panda3ds_libretro PROPERTIES
    OUTPUT_NAME "trident_libretro"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release"
)

option(BUILD_TEST_HARNESS "Build the functional test harness" OFF)
if(BUILD_TEST_HARNESS AND NOT CMAKE_SYSTEM_NAME STREQUAL "iOS" AND NOT ANDROID)
    add_subdirectory(tests/functional)
endif()
